Fix for a paragraph animator text underlapping the hamburger button on iOS Firefox in landscape orientation.

--- a/frontend/src/components/home-page/header-main/Hero.module.scss
+++ b/frontend/src/components/home-page/header-main/Hero.module.scss
@@ -186,10 +186,13 @@ a.scrollCta {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100%;
   padding: var(--hero-padding);
+  box-sizing: border-box;
 }
 
 .titleBranding {
